@@ -47,10 +47,9 @@ INSTALL_W3MIMGDISPLAY=${INSTALL_PROGRAM}
 HELP_FILE = w3mhelp-w3m_en.html
 KEYBIND_SRC = keybind.c
 KEYBIND_OBJ = keybind.o
-GCLIB=@gclib@
 
-VERSION=0.4.1+cvs-1.781
-MODEL=@W3M_TARGET@-@W3M_MODEL@-EN
+VERSION=0.4.1+cvs-1.782
+MODEL=i686-pc-linux-gnu-@W3M_MODEL@-EN
 
 SRCS=main.c file.c buffer.c display.c etc.c search.c linein.c table.c local.c \
 	form.c map.c frame.c rc.c menu.c mailcap.c image.c \
